Added KERBEROS feature. Disable it when running tests on FIPS closes #14966

--- a/themes/src/main/resources/theme/base/admin/resources/partials/user-storage-ldap.html
+++ b/themes/src/main/resources/theme/base/admin/resources/partials/user-storage-ldap.html
@@ -312,7 +312,7 @@
             </div>
         </fieldset>
 
-        <fieldset>
+        <fieldset data-ng-show="serverInfo.featureEnabled('KERBEROS')">
             <legend id="kerberosIntegrationHeader" collapsed><span class="text">{{:: 'kerberos-integration' | translate}}</span></legend>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="allowKerberosAuthentication">{{:: 'allow-kerberos-authentication' | translate}} </label>
